--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 header{
-    position: fixed;  
+    position: fixed;
 }
 
 nav {
@@ -186,6 +186,39 @@ main .project{
 }
 
 
+.dropdown{
+    display: none;
+    position: relative;
+    background-color: rgba(222, 255, 255, 0.548);
+    min-width: 160px;
+    float: right;
+    border-radius: 0 0 0 20px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.dropdown .contact:hover{
+    background-color: white;
+    color: #27acff;
+    border-radius: 0 0 0 20px;
+}
+
+.dropdown a:hover{
+    background-color: white;
+    color: #27acff;
+}
+
+.dropdown a {
+    align-items: center;
+    justify-content: center;
+    color: #ffffff;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: flex;
+}
+
+.show{
+    display: inline-block;
+}
 /* media */
 
 @media(max-width:1000px){
@@ -200,7 +233,10 @@ main .project{
     .iconMenu{
         display: inline-block;
         padding-right: 20px;
+    }
 
+    .iconMenu:hover{
+        cursor: pointer;
     }
 
     .bar1, .bar2, .bar3{
@@ -243,6 +279,9 @@ main .project{
         font-size: .85rem;
         padding: 10px 5px;
     }
+
+
+
 }
 
 /* keyframes*/
